--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.1.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "file-loader": "^6.2.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "style-loader": "^3.3.1",
@@ -44,6 +45,7 @@
     "webpack-cli": "^5.0.0"
   },
   "dependencies": {
+    "dompurify": "^2.4.1",
     "prettier": "^2.7.1"
   }
 }
